--- a/intro_page/intro_style.css
+++ b/intro_page/intro_style.css
@@ -56,6 +56,11 @@ a:hover {
     box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.05);
     margin-bottom: -100px;
 }
+
+.popular-container:hover {
+    background-color: #3B82F6;
+    color: #ffffff;
+}
 .village-container {
     width: 30%;
     height: 150px;
@@ -142,6 +147,11 @@ a:hover {
     margin-right: 1%;
     position: relative;
 } 
+
+.withyou-info:hover {
+    background-color: #3B82F6;
+    color: #ffffff;
+}
 
 .join {
     font-size:6px;
